# Radar_interpolation

./: .gitignore  201008081800_VAN.PPI1_A.raw.h5_with_rayHdrs_F_Z2.png.aux.xml  201008081800_VAN.PPI1_A.raw.h5_with_rayHdrs_F_Z2.tiff  201008081800_VAN.PPI1_A.raw.h5_with_rayHdrs_F_Z2_8bit.tiff  201008081810_VAN.PPI3_A.raw.h5_with_rayHdrs_F_Z2.png.aux.xml  201008081810_VAN.PPI3_A.raw.h5_with_rayHdrs_F_Z2.tiff  201008081810_VAN.PPI3_A.raw.h5_with_rayHdrs_F_Z2_8bit.png.aux.xml  201008081810_VAN.PPI3_A.raw.h5_with_rayHdrs_F_Z2_8bit.tiff  201008081815_VAN.PPI1_A.raw.h5_with_rayHdrs_F_Z2.png.aux.xml  201008081815_VAN.PPI1_A.raw.h5_with_rayHdrs_F_Z2.tiff  201008081815_VAN.PPI1_A.raw.h5_with_rayHdrs_F_Z2_8bit.png.aux.xml  201008081815_VAN.PPI1_A.raw.h5_with_rayHdrs_F_Z2_8bit.tiff  README.md  VAN-1800-1810_20008081800_-morph-02.tiff  VAN-1800-1810_20008081800_-morph-03.tiff  VAN-1800-1810_20008081800_-morph-04.tiff  VAN-1800-1810_20008081800_-morph-05.tiff  VAN-1800-1810_20008081800_-morph-06.tiff  VAN-1800-1810_20008081800_-morph-07.tiff  VAN-1800-1810_20008081800_-morph-08.tiff  VAN-1800-1810_20008081800_-morph-09.tiff  VAN-1800-1810_20008081800_-morph-10.tiff  VAN-1800-1810_20008081800_-morph-11.tiff  VAN-1800-1815_20008081800_-morph-01.tiff  VAN-1800-1815_20008081800_-morph-02.tiff  VAN-1800-1815_20008081800_-morph-03.tiff  VAN-1800-1815_20008081800_-morph-04.tiff  VAN-1800-1815_20008081800_-morph-05.tiff  VAN-1800-1815_20008081800_-morph-06.tiff  VAN-1800-1815_20008081800_-morph-07.tiff  VAN-1800-1815_20008081800_-morph-08.tiff  VAN-1800-1815_20008081800_-morph-09.tiff  VAN-1800-1815_20008081800_-morph-10.tiff  VAN-1800-1815_20008081800_-morph-11.tiff  VAN-1800-1815_20008081800_-morph-12.tiff  VAN-1800-1815_20008081800_-morph-13.tiff  VAN-1800-1815_20008081800_-morph-14.tiff  VAN-1800-1815_20008081800_-morph-15.tiff  VAN-1800-1815_20008081800_-morph-16.tiff  VAN_1805.tiff  (+24 more)
optflow/: CMakeLists.txt
optflow/lib/: CImg.h  CImg.h~  CMakeLists.txt  DenseImageExtrapolator.h  DenseImageMorpher.cpp  DenseImageMorpher.cpp~  DenseImageMorpher.h  DenseMotionExtractor.h  DualDenseMotionExtractor.cpp  DualDenseMotionExtractor.cpp~  DualDenseMotionExtractor.h  ImageExtrapolatorDriver.cpp  ImageExtrapolatorDriver.cpp~  ImageExtrapolatorDriver.h  ImageExtrapolatorDriver.h~  ImagePyramid.cpp  ImagePyramid.cpp~  ImagePyramid.h  InverseDenseImageExtrapolator.cpp  InverseDenseImageExtrapolator.cpp~  InverseDenseImageExtrapolator.h  InverseDenseImageExtrapolator.h~  LucasKanade.cpp  LucasKanade.cpp~  LucasKanade.h  LucasKanade.h~  LucasKanadeOpenCV.cpp  LucasKanadeROI.cpp  MotionExtractorDriver.cpp  MotionExtractorDriver.h  Proesmans.cpp  Proesmans.cpp~  Proesmans.h  Proesmans.h~  PyramidalDenseMotionExtractor.cpp  PyramidalDenseMotionExtractor.cpp~  PyramidalDenseMotionExtractor.h  PyramidalDenseMotionExtractor.h~  ROI.cpp  (+7 more)
(+158 files in other folders)
